# irlcord

./: .gitignore  Dockerfile  Makefile  README.md  config.json.example  docker-compose.yml  example.sql  example.yaml  go.mod  pyproject.toml  requirements.txt  schema.sql
cmd/irlcord/: main.go
irlcord/: main.py
irlcord/cogs/: events.py  groups.py
irlcord/utils/: db.py  discord_helpers.py
pkg/bot/: bot.go
pkg/config/: config.go
pkg/db/: db.go
pkg/discord/: helpers.go
pkg/models/: models.go
scripts/: dev_setup.sh
tests/: test_basic.py
