[tool.poetry]
name = "irlcord"
version = "0.1.0"
description = "A Discord bot for managing IRL events within different groups/circles"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "irlcord"}]

[tool.poetry.dependencies]
python = "^3.8.1"
discord-py = "^2.3.2"
pyyaml = "^6.0.1"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
irlcord = "irlcord.main:main"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100 